# vipster

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  about.html  appveyor.yml  architecture.qmodel  atom.frag  atom.vert  atom_model.h  bond.frag  bond_model  buildwindows.bat  cell.frag  cipster.pro  class_molecule.py  class_molecule_crystal.py  cli.html  codecov.yml  collapsiblewidget.py  config.cpp  config.h  conftab.py  coordedit.py  default.conf  default.json  definitions.h  download.html  faster.f90  format.html  fragmentBonds.fsh  fragmentLines.fsh  fragmentPlane.fsh  (+64 more)
gui/qt/: CMakeLists.txt  basewidget.cpp  glwidget.cpp  glwidget.h  main.cpp  mainwidgets.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  molmodel.cpp  molmodel.h  savefmtdialog.cpp  savefmtdialog.h  savefmtdialog.ui  toolwidgets.h  viewport.cpp  viewport.h  viewport.ui  vipsterapplication.cpp  vipsterapplication.h
gui/qt/datawidgets/: data2dwidget.cpp  data2dwidget.h  data3dvwidget.h  data3dwidget.cpp  data3dwidget.h
gui/qt/mainwidgets/: datawidget.cpp  datawidget.h  molwidget.cpp  molwidget.h  molwidget.ui  paramwidget.cpp  paramwidget.h  paramwidget.ui  periodictablewidget.cpp  periodictablewidget.h  periodictablewidget.ui  presetwidget.cpp  presetwidget.h  presetwidget.ui  settingswidget.cpp  settingswidget.h
gui/qt/toolwidgets/: cellmodwidget.cpp  cellmodwidget.h  cellmodwidget.ui  definewidget.cpp  definewidget.h  definewidget.ui  lammpswidget.lmp.cpp  lammpswidget.lmp.h  millerwidget.cpp  millerwidget.h  millerwidget.ui  pickwidget.cpp  pickwidget.h  pinwidget.cpp  pinwidget.h  pinwidget.ui  pythonconsole.py.cpp  pythonconsole.py.h  pythonwidget.py.cpp  pythonwidget.py.h  pythonwidget.py.ui  scripthelp.cpp  scripthelp.ui  scriptwidget.cpp  scriptwidget.h
gui/web/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt  atom.py.cpp  atom.py.h  atom.sip  bond.py.cpp  configfile.py.cpp  configfile.py.h  configure.py  cpmd.py.cpp  data.py.cpp  fileio.py.cpp  fileio.py.h  global.py.h  io.py.cpp  kpoints.py.cpp  kpoints.py.h  lmpinput.py.cpp  molecule.py.cpp  molecule.py.h  parameters.py.cpp  parameters.py.h  periodictable.py.cpp  plugin.py.cpp  plugin.py.h  presets.py.cpp  pse.py.cpp  pwinput.py.cpp  python.pro  python.qbs  pyvipster.cpp  pyvipster.h  step.py.cpp  step.py.h  vec.py.cpp  vec.sip  vipster.cpp  vipster.sip  xyz.py.cpp
python/tests/: test_iowrapper.py  test_molecule.py  test_preamble.py
python/tests/test_ioplugins/: test_aimall.py  test_cpmd.py  test_empire.py  test_pwInput.py  test_xsf.py  test_xyz.py
python/vipster/: iowrapper.py  mol_c.c  molecule.py  sca.py  settings.py
python/vipster/gui/: confwidgets.py  cpparam.py  lammpsparam.py  molwidgets.py  parameterwidgets.py  qtwrapper.py
python/vipster/ioplugins/: cpmd.py  lammpsData.py  mol2.py  pwOutput.py  turbomole.py
vipster/: .eslintrc.json  .htaccess  CMakeLists.txt  QtVipster.qbs  README.md  WebVipster.qbs  __init__.py  atom.cpp  atom.h  atom.py.cpp  atom.tpp  atom_model.h  bond.py.cpp  bond.py.h  bond_model.h  build-scss.sh  configfile.cpp  configfile.h  configfile.py.cpp  configfile.py.h  crystal.cpp  crystal.h  data.h  data.py.cpp  data.py.h  default.json  fileio.cpp  fileio.h  fileio.py.cpp  fileio.py.h  filter.cpp  filter.h  filter.tpp  frontend.qbs  global.h  global.py.cpp  global.py.h  glwidget.cpp  glwidget.h  guiwrapper.cpp  (+60 more)
vipster/common/: atom_model.h  bond_model.h  guidata.cpp  guidata.h  guiglobals.h  guimat.cpp  guimat.h  guiwrapper.cpp  guiwrapper.h  meshdata.cpp  meshdata.h  seldata.cpp  seldata.h  stepdata.cpp  stepdata.h
vipster/ftypeplugins/: __init__.py  aimall.py  cpmd.py  cube.py  empire.py  lammpsCustom.py  lammpsData.py  pwInput.py  pwOutput.py  turbomole.py  wrapper.py  xsf.py  xyz.py
vipster/gui/: __init__.py  collapsiblewidget.py  conftab.py  confwidgets.py  cpparam.py  gui_c.c  lammpsparam.py  lammpstab.py  main.py  mainwidget.py  moltab.py  molwidgets.py  parameterwidgets.py  pwparam.py  qtwrapper.py  viewport.py
vipster/gui/tools/: __init__.py  cellmod_tool.py  pick_tool.py  plane_tool.py  script_tool.py  vol_tool.py
vipster/io/: data.h  parameters.cpp  parameters.h  parameters.py.cpp  parameters.py.h  plugin.cpp  plugin.py.cpp  plugin.py.h  presets.py.cpp  presets.py.h  util.cpp
vipster/io/plugins/: cpmdinput.cpp  cpmdinput.h  cube.cpp  lmpinput.cpp  lmptrajec.cpp  poscar.cpp  poscar.h  pwinput.cpp  pwoutput.cpp  xsf.cpp  xsf.h
vipster/ioplugins/: aimall.py  cpmd.py  cube.py  empire.py  lammpsCustom.py  lammpsData.py  mol2.py  pwInput.py  pwOutput.py  turbomole.py  xsf.py  xyz.py
vipster/plugins/: cpmdinput.cpp  cpmdinput.h  cube.cpp  cube.h  json.cpp  json.h  lmpinput.cpp  lmpinput.h  lmptrajec.cpp  lmptrajec.h  moltemplate.py.cpp  moltemplate.py.h  orca.cpp  orca.h  poscar.cpp  poscar.h  pwinput.cpp  pwinput.h  pwoutput.cpp  pwoutput.h  xsf.cpp  xsf.h  xyz.cpp  xyz.h
vipster/qt/: basewidget.cpp  basewidget.h  bonddelegate.cpp  bonddelegate.h  bondmodel.cpp  bondmodel.h  configbase.cpp  configbase.h  configwidget.cpp  configwidget.h  configwidget.ui  configwidgets.h  datawidget.cpp  datawidget.h  datawidget.ui  glwidget.cpp  glwidget.h  main.cpp  mainwidgets.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  molmodel.cpp  molmodel.h  molwidget.cpp  molwidget.h  molwidget.ui  parambase.cpp  parambase.h  paramwidget.cpp  paramwidget.h  paramwidget.ui  paramwidgets.h  periodictablewidget.cpp  periodictablewidget.h  periodictablewidget.ui  presetbase.cpp  presetbase.h  presetwidget.cpp  presetwidget.h  (+16 more)
vipster/qt/configs/: cpconfig.cpp  cpconfig.h  cpconfig.ui  lmpconfig.cpp  lmpconfig.h  lmpconfig.ui  poscarconfig.h  pwconfig.cpp  pwconfig.h  (+4 more)
vipster/resources/: atom.frag  atom.vert  bond.frag  bond.vert  cell.frag  cell.vert  mesh.frag  mesh.vert  miller.vert  select.frag  select.vert  selection.frag  selection.vert  vipster.appdata.xml  vipster.icns  vipster.qrc  win.rc
vipster/styles/: _variables.scss  styles.css  styles.css.map  styles.scss
vipster/web/: main.cpp
(+648 files in other folders)
